2008-04-03 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* po/es.po
	* po/LINGUAS
	Added spanish translation by Peter Gordon.

2008-04-02 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/TextThought.py
	Fix issue 92.
	* po/de.po
	Updated german translation.

2008-04-02 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/TextThought.py
	Refactoring leads to -200 loc.
	
2008-04-02 Martin Schaaf <mascha@ma-scha.de>

	* src/MapList.py
	* src/MainWindow.py
	Differentiate between index in MapList and index in browser (column
	id). Column id is used as map index. Do not give an untitled map a
	number. Calculate new column id from biggest existing column id.
	Remove map title to map relation because it isn't used.
	* src/Browser.py
	Remove space in string.

2008-04-01 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Critical bug fixed. Couldn't deselect after selecting with box.
	
2008-03-31 Martin Schaaf <mascha@ma-scha.de>

	* debian/chnagelog
	Add all entries from the rc versions.
	* configure.ac
	Bump to 0.5.0dev version.

2008-03-31 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* data/labyrinth.glade
	* src/MainWindow.py
	Beautify drop dead ugly export dialog.
	* src/utils.py
	Simplification.

2008-03-29 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Inherit color from parent node.

2008-03-29 Martin Schaaf <mascha@ma-scha.de>

	* src/TextThought.py
	o set attribute to none or normal on unsetting (there is more work
	todo)

2008-03-28 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix Issue 80 doing correct undo move.
	* po/de.po
	* po/labyrinth.pot
	Update german translation.

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* src/labyrinth.py
	o check for pygtk version before gtk is imported like it is said in
	the pygtk FAQ, fixes Issue 82

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* src/Makefile.am