@@ -104,6 +104,7 @@ def get_data_file (file_name):
 	return open(get_data_file_name(file_name))
 
 def strip_path_from_file_name(f):
+	''' Removes the path including all leading and trailing slashes from a filename. '''
 	return f.split('/')[-1]
 
 # Drawing functions
@@ -115,12 +116,7 @@ STYLE_NORMAL = 0
 STYLE_EXTENDED_CONTENT = 1
 
 def draw_thought_outline (context, ul, lr, background_color, am_root = False, am_primary = False, style=STYLE_NORMAL):
-	if style == STYLE_NORMAL:
-		draw_thought_classic (context, ul, lr, am_root, am_primary, background_color)
-	elif style == STYLE_EXTENDED_CONTENT:
-		draw_thought_extended (context, ul, lr, am_root, am_primary, background_color)
-	else:
-		print "Error: Unknown thought style: "+str(style)
+	draw_thought_extended(context, ul, lr, am_root, am_primary, background_color, style == STYLE_EXTENDED_CONTENT)
 
 # This is used to find the required margin from the (real) ul / lr coords to the edge of the
 # box area.  Makes selection of thoughts less erratic
@@ -137,7 +133,7 @@ def margin_thought_classic ():
 def gtk_to_cairo_color(color):
 	return (color.red / 65535.0, color.green / 65535.0, color.blue / 65535.0)
 
-def draw_thought_classic (context, ul, lr, am_root, am_primary, background_color):
+def draw_thought_extended (context, ul, lr, am_root, am_primary, background_color, fatborder=False):
 	context.move_to (ul[0], ul[1]+5)
 	context.line_to (ul[0], lr[1]-5)
 	context.curve_to (ul[0], lr[1], ul[0], lr[1], ul[0]+5, lr[1])
@@ -156,40 +152,19 @@ def draw_thought_classic (context, ul, lr, am_root, am_primary, background_color
 		context.set_source_rgb (r, g, b)
 	context.fill_preserve ()
 	context.set_source_rgb (0,0,0)
-	context.stroke ()
-
-def draw_thought_extended (context, ul, lr, am_root, am_primary, background_color):
-	context.move_to (ul[0], ul[1]+5)
-	context.line_to (ul[0], lr[1]-5)
-	context.curve_to (ul[0], lr[1], ul[0], lr[1], ul[0]+5, lr[1])
-	context.line_to (lr[0]-5, lr[1])
-	context.curve_to (lr[0], lr[1], lr[0], lr[1], lr[0], lr[1]-5)
-	context.line_to (lr[0], ul[1]+5)
-	context.curve_to (lr[0], ul[1], lr[0], ul[1], lr[0]-5, ul[1])
-	context.line_to (ul[0]+5, ul[1])
-	context.curve_to (ul[0], ul[1], ul[0], ul[1], ul[0], ul[1]+5)
-	if am_root:
-		context.set_source_rgb (0.447, 0.624, 0.812)
-	elif am_primary:
-		context.set_source_rgb (0.937, 0.831, 0.000)
+	if fatborder:
+		orig_line_width = context.get_line_width ()
+		context.set_line_width (5.0)
+		context.stroke ()
+		context.set_line_width (orig_line_width)
 	else:
-		r,g,b = gtk_to_cairo_color(background_color)
-		context.set_source_rgb (r, g, b)
-	context.fill_preserve ()
-	context.set_source_rgb (0,0,0)
-	orig_line_width = context.get_line_width ()
-	context.set_line_width (5.0)
-	context.stroke ()
-	context.set_line_width (orig_line_width)
-
+		context.stroke ()
+		
 # Export outline stuff
 def export_thought_outline (context, ul, lr, background_color, am_root = False, am_primary = False, style=STYLE_NORMAL, move=(0,0)):
 	real_ul = (ul[0]+move[0], ul[1]+move[1])
 	real_lr = (lr[0]+move[0], lr[1]+move[1])
-	if style == STYLE_NORMAL:
-		draw_thought_classic (context, real_ul, real_lr, False, am_primary, background_color)
-	else:
-		print "Error: Unknown thought style: "+str(style)
+	draw_thought_extended (context, real_ul, real_lr, False, am_primary, background_color, style == STYLE_EXTENDED_CONTENT)
 
 def pixbuf_to_cairo (pixel_array):
 	result = []
